feat: meta tags added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Paddy AI | Your AI Buddy</title>
+    <meta name="description" content="PaddyAI is an open-source, interactive web application that allows you to chat with a friendly and intelligent AI. Powered by Google's Gemini API, PaddyAI provides engaging and insightful conversations.">
+    <meta name="author" content="Treasure Uzoma">
+    <meta name="theme-color" content="#111">
+    <meta property="og:title" content="Paddy AI | Your AI Pal">
+    <meta property="og:description" content="PaddyAI is an open-source, interactive web application that allows you to chat with a friendly and intelligent AI. Powered by Google's Gemini API, PaddyAI provides engaging and insightful conversations.">
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
     <div id="root"></div>
