--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paddy AI | Your AI Buddy</title>
-    <meta name="description" content="PaddyAI is an open-source, interactive web application that allows you to chat with a friendly and intelligent AI. Powered by Google's Gemini API, PaddyAI provides engaging and insightful conversations.">
-    <meta name="author" content="Treasure Uzoma">
-    <meta name="theme-color" content="#111">
-    <meta property="og:title" content="Paddy AI | Your AI Pal">
-    <meta property="og:description" content="PaddyAI is an open-source, interactive web application that allows you to chat with a friendly and intelligent AI. Powered by Google's Gemini API, PaddyAI provides engaging and insightful conversations.">
-    <meta name="twitter:card" content="summary_large_image">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Paddy AI | Your AI Buddy</title>
+        <meta
+            name="description"
+            content="PaddyAI is an open-source, interactive web application that allows you to chat with a friendly and intelligent AI. Powered by Google's Gemini API, PaddyAI provides engaging and insightful conversations."
+        />
+        <meta name="author" content="Treasure Uzoma" />
+        <meta name="theme-color" content="#111" />
+        <meta property="og:title" content="Paddy AI | Your AI Pal" />
+        <meta
+            property="og:description"
+            content="PaddyAI is an open-source, interactive web application that allows you to chat with a friendly and intelligent AI. Powered by Google's Gemini API, PaddyAI provides engaging and insightful conversations."
+        />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="og:image" content="/images/logo.png" />
+        <meta name="image" content="/images/logo.png" />
+        <link rel="icon" href="/images/logo.png" />
+        <link rel="icon" href="/images/favicon.ico" />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
