--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             content="PaddyAI is an open-source, interactive web application that allows you to chat with a friendly and intelligent AI. Powered by Google's Gemini API, PaddyAI provides engaging and insightful conversations."
         />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta property="og:image" content="/images/logo.png" />
-        <meta name="image" content="/images/logo.png" />
         <link rel="icon" href="/images/logo.png" />
         <link rel="icon" href="/images/favicon.ico" />
+        <meta property="og:image" content="/images/logo.jpg" />
+        <meta name="image" content="/images/logo.jpg" />
     </head>
     <body>
         <div id="root"></div>
